...
    </plurals>
    <string name="enter_your_pass_phrase">Enter your pass phrase</string>
    <string name="passphrase_must_be_non_empty">Pass phrase cannot be empty</string>
    <string name="your_message_must_be_non_empty">Message should not be empty</string>
    <string name="password_is_incorrect">Incorrect pass phrase, please try again</string>
    <string name="use_another_account">Use another account</string>
    <string name="reply_all">Reply All</string>
...
    <string name="loss_of_this_pass_phrase_cannot_be_recovered">Lost pass phrase cannot be recovered.</string>
    <string name="see_choosing_secure_pass_phrases">See choosing secure pass phrases</string>
    <string name="select_stronger_pass_phrase">Please select a stronger pass phrase. Combinations of 4 to 5 uncommon
        words are the best.</string>
    <string name="password_quality_subtext">(time to crack:</string>
    <string name="password_quality_perfect">perfect</string>
    <string name="password_quality_great">great</string>
    <string name="password_quality_good">good</string>
    <string name="password_quality_reasonable">reasonable</string>
    <string name="password_quality_poor">poor</string>
    <string name="password_quality_weak">weak</string>
    <string name="repeat_passphrase_hint">Please repeat it one more time. Make sure to note the pass phrase down.</string>
    <string name="pass_phrases_do_not_match">The two pass phrases do not match, please try again.</string>
...
    <string name="please_wait_while_pass_phrase_will_be_changed">Changing a pass phrase, please wait</string>
    <string name="backup_options">Backup options</string>
    <string name="change_pass_phrase">Change pass phrase</string>
    <string name="account_has_no_associated_keys">This account has no associated keys. Write us at %1$s</string>
    <string name="pass_phrase_is_too_weak">Your pass phrase is too weak</string>
...
    <string name="cannot_send_message_unknown_error">Can\'t send message: unknown error</string>
    <string name="message_failed_to_send">Message failed to send: unknown error\n\n%1$s</string>
    <string name="key_details">Key details</string>
    <string name="public_key_below_is_safe_to_share">Public Keys are safe to share</string>
    <string name="show_public_key">Show public key</string>
...
    <string name="pub_key">Public Key</string>
    <string name="template_created">Created: %1$s</string>
    <string name="template_modified">Modified: %1$s</string>
    <string name="template_algorithm">Algorithm: %1$s</string>
    <string name="template_algorithm_bits">Bits: %1$s</string>
...
    <string name="all_mail">All Mail</string>
    <string name="stored_pass_phrase_loading">Stored pass phrase: loading &#8230;</string>
    <string name="stored_pass_phrase_matched">Stored pass phrase: matched</string>
    <string name="stored_pass_phrase_mismatch">Stored pass phrase: mismatch</string>
    <string name="could_not_check_pass_phrase">Could not check the pass phrase</string>
...
    <string name="save_pass_phrase">Save pass phrase</string>
    <string name="remember_pass_phrase_temporarily">Remember pass phrase temporarily</string>
    <string name="pass_phrase_not_provided">Pass phrase is not provided</string>
    <string name="forget_passphrase">Forget pass phrase</string>
    <string name="provide_passphrase">Provide pass phrase</string>
...
    <string name="please_pay_attention_some_keys_were_skipped">Please note that some keys were skipped</string>
    <string name="this_key_is_unprotected_please_protect_it_with_pass_phrase_before_import">This key is unprotected. Please protect it with a pass phrase before import.</string>
    <string name="private_key_passphrase_anti_bruteforce_protection_hint">To protect you and your data, the next attempt will only be possible after the timer below finishes. Please wait until then before trying again.</string>
    <string name="avatar">Avatar</string>
    <string name="move_to_spam">Move to Spam</string>
...
