...
        app:errorEnabled="true"
        app:passwordToggleContentDescription="description"
        app:passwordToggleEnabled="true"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTKeyPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_marginTop="@dimen/default_margin_content_small"
        android:id="@+id/btnUpdatePassphrase"
        style="@style/AppWidget.Button.Big"
        android:layout_width="match_parent"
        android:text="@string/provide_passphrase"
        android:textAllCaps="true"
        android:visibility="gone"
        tools:visibility="visible" />
...
