...
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/default_margin_content_small"
            android:layout_weight="1"
            android:hint="@string/new_private_key"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/buttonCheck"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextNewPrivateKey"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

...
